--- a/kec.html
+++ b/kec.html
@@ -3,6 +3,7 @@
         <title>Demo</title>
     </head>
     <body><h1>Testing H1</h1>
-    <p>We are learing HTML</p></body>
-    
+        <h7>hi</h7>
+    <p><b>We are learing HTML</b></p></body>
+    <a href="th.jpg"><img src="th.jpg" </a>
 </html>
